--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,6 +24,7 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v3
     - name: Get tag
       run: short_sha=$(git rev-parse --short $GITHUB_SHA)
     - name: Tag
